--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/fakeweb"]
 	path = vendor/fakeweb
 	url = git://github.com/mislav/fakeweb.git
+[submodule "vendor/flickr_fu"]
+	path = vendor/flickr_fu
+	url = git://github.com/commonthread/flickr_fu.git
